platform/stack/packages/observability/headlamp/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: adhar-system
  annotations:
    argocd.argoproj.io/sync-wave: "100"
    nginx.ingress.kubernetes.io/rewrite-target: /headlamp/$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: "nginx"
  rules:
    - host: adhar.localtest.me
      http:
        paths:
          - path: /headlamp(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: headlamp
                port:
                  number: 80
